adding SQLite setup and inital models

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "127.0.0.1,::1, localhost",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=AppData/RSSReader.db"
   }
 }
