--- a/RSS-Reader.csproj
+++ b/RSS-Reader.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>RSS_Reader</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7" />
+  </ItemGroup>
+
 </Project>
