Misc fixes for index page and adding initial JS for XHR

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "127.0.0.1,::1, localhost",
+  "AllowedHosts": "*",
 
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=AppData/RSSReader.db"
