--- a/RSS-Reader.csproj
+++ b/RSS-Reader.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7" />
+    <PackageReference Include="System.ServiceModel.Syndication" Version="9.0.7" />
   </ItemGroup>
 
 </Project>
