--- a/RSS-Reader.csproj
+++ b/RSS-Reader.csproj
@@ -14,6 +14,10 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7" />
     <PackageReference Include="System.ServiceModel.Syndication" Version="9.0.7" />
+
+    <Content Include="Licenses/**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
